Update Python requirement to allow 3.x only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "market-data-dq-platform"
 version = "0.1.0"
 description = "Market Data DQ Platform for VaR risk factors (spikes/gaps/relations/reconciliation) with audit trail + Streamlit dashboard"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4"
 dependencies = [
   "numpy>=1.24",
   "pandas>=2.1",
