--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "pydantic-settings>=2.2",
   "python-dateutil>=2.8",
   "requests>=2.31",
+  "tenacity>=8.2",
   "yfinance>=0.2.0",
   "streamlit>=1.31",
   "plotly>=5.18",
